# unofficial-codeium-zed-extension

./: Cargo.toml  README.md  extension.toml  extension.wasm
src/: lib.rs
