[package]
name = "unofficial-codeium-extension"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.1.0"
webbrowser = "1.0.2"
dirs = "5.0.1"
web-sys = { version = "0.3.72", features = ["Window"] }
uuid = { version = "1.11.0", features = ["v4"] }